# sales-report-automation

./: .gitignore  README.md  config.py  conftest.py  demo_colab.ipynb  generate_data.py  main.py  protect_branches.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
examples/: ventes_exemple_janvier_2024.csv
src/: cleaner.py  extractor.py  reporter.py  scheduler.py  transformer.py  visualizer.py
tests/: test_cleaner.py  test_transformer.py
